@@ -1,6 +1,8 @@
 package gameEntities;
 
 
+import java.util.Optional;
+
 import org.newdawn.slick.Image;
 
 import design.utilities.Pair;
@@ -8,9 +10,8 @@ import design.utilities.enums.Entities;
 
 public class Obstacle extends GameEntity{
 	
-	
-	public Obstacle(Pair<Integer, Integer> position, Entities typeEnt) {
-		super(position, typeEnt);
+	public Obstacle(Pair<Integer, Integer> position, Optional<Entities> typeEnt) {
+		super(position, Optional.empty(), typeEnt);
 	}
 
 }
