@@ -1,9 +1,12 @@
 package gameEntities.modifiers;
 
+import java.util.Optional;
+
 import org.newdawn.slick.Image;
 
 import design.utilities.Pair;
 import design.utilities.enums.Entities;
+import design.utilities.enums.Pickupables;
 import gameEntities.GameEntity;
 import utility.Stats;
 
@@ -13,8 +16,8 @@ public class ModifiersImpl extends GameEntity{
 	private int modQty;
 	private String name;
 	
-	public ModifiersImpl(final Pair<Integer, Integer> position, final Stats stat, final int qty, final String name, final Entities typeEnt) {
-		super(position, typeEnt);
+	public ModifiersImpl(final Pair<Integer, Integer> position, final Stats stat, final int qty, final String name, final Optional<Pickupables> pickUps) {
+		super(position, pickUps, Optional.empty());
 		this.stat = stat;
 		this.modQty = qty;
 		this.name = name;
